--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,14 @@
+.attendee-display {
+  float: left;
+}
+
+.content {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+}
+
 .App {
   text-align: center;
 }
